# Mana

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: excludedfileslist.txt
assets/models/lumberjack/: lumberJack.DAE  untitled.dae
assets/shaders/: blit.fs  depth.fs  depth.vs  dof.fs  dof.vs  fxaa.fs  fxaa.vs  hud.fs  motionblur.fs  objectvelocity.vs  position.fs  position.vs  simple.fs  skybox.fs  sobel.fs  toon.fs  volume.vs
assets/shaders/bloom/: bloom.fs  bloomblur.fs  bloomthresh.fs
assets/shaders/opengl/: 1.model_loading.fs  1.model_loading.vs  atmosphericscattering.frag  atmosphericscattering.vert  blit.frag  blit.fs  bloom.comp  compile.bat  dof.fs  dualcontouring.frag  dualcontouring.vert  fxaa.frag  fxaa.fs  lightscattering.fs  manifolddualcontouring.frag  model.frag  model.vert  modelcommon.glsl  modelstatic.frag  modelstatic.vert  positiondepth.fs  screenspace.vert  simple.vs  sprite.frag  sprite.vert  spriteanimation.frag  spriteanimation.vert  texture.frag  texture.vert  toon.vs  vignette.fs  volume.frag  volume.fs  volume.vert
assets/shaders/opengl/bloom/: bloom.fs  bloomblur.fs  bloomthresh.fs
assets/shaders/opengl/clouds/: cloudspost.fs  copyframe.fs  volumetricclouds.fs
assets/shaders/opengl/grass/: grass.frag  grass.fs  grass.vert  grass.vs  grass_lod1.gs  grass_lod2.gs  grass_lod3.gs  grassvert.comp
assets/shaders/opengl/hbao/: hbao.fs
assets/shaders/opengl/lensflare/: lensflare.fs  lensflareblur.fs  lensflarecomposite.fs
assets/shaders/opengl/motionblur/: motionblur.fs  objectvelocity.fs  objectvelocity.vs  velocity.fs  velocity.vs
assets/shaders/opengl/ssao/: ssao.fs  ssaoblur.fs
assets/shaders/spirv/: atmosphericscattering.frag.spv  atmosphericscattering.vert.spv  blit.frag.spv  dualcontouring.frag.spv  dualcontouring.vert.spv  fxaa.frag.spv  grass.frag.spv  grass.vert.spv  grassvert.comp.spv  manifolddualcontouring.frag.spv  manifolddualcontouring.vert.spv  model.frag.spv  model.vert.spv  modelflat.frag.spv  modelstatic.frag.spv  modelstatic.vert.spv  screenspace.vert.spv  sprite.frag.spv  sprite.vert.spv  spriteanimation.frag.spv  spriteanimation.vert.spv  ssao.frag.spv  texture.frag.spv  texture.vert.spv
assets/shaders/ssao/: ssao.fs  ssaoblur.fs
assets/textures/: 10bit.psd
examples/: CMakeLists.txt  hellogame.c  helloworld.c
include/core/: arithmatic.h  camera.h  common.h  engine.h  engine.hpp  enginesettings.hpp  entity.hpp  fpscount.h  inputmanager.h  inputmanager.hpp  mana.h  scene.hpp  settings.h  sxml.h  usersettings.hpp  util.hpp  vulkanrenderer.h  window.h
include/datastructures/: vector.h
include/graphics/: bliteffect.hpp  camera.h  camera.hpp  cloudsystem.hpp  effect.hpp  gbuffer.h  gbuffer.hpp  graphicsutils.h  graphicsutils.hpp  grasssystem.hpp  marchingcubes.h  mesh.h  mesh.hpp  model old.h  model.h  model.hpp  modeldata.h  modelentity.hpp  postprocess.hpp  shader.h  shader.hpp  sprite.h  stb_image.h  swapchain.h  texture.h  texture.hpp  texturecache.h  transvoxelsystem.hpp  vertex.h  vertex.hpp  window.hpp
include/graphics/effects/: bliteffect.h  bliteffect.hpp  bloomeffect.hpp  dofeffect.hpp  effect.hpp  fxaaeffect.hpp  hbaoeffect.hpp  lensflareeffect.hpp  lightscatteringeffect.hpp  ssaoeffect.hpp  vignetteeffect.hpp
include/graphics/render/: blitsprite.h  sprite.h
include/mana/: mana.h
include/mana/audio/: audioclip.h  audiomanager.h
include/mana/core/: camera.h  common.h  corecommon.h  engine.h  fileio.h  gpuapi.h  graphicslibrary.h  inputmanager.h  mana.h  memoryallocator.h  vulkancore.h  vulkanrenderer.h  window.h  xmlnode.h  xmlparser.h
include/mana/graphics/: gbuffer.h  graphicscommon.h  graphicsutils.h  mesh.h  model.h  postprocess.h  shader.h  stb_image.h  swapchain.h  texture.h
include/mana/graphics/dualcontouring/: dualcontouring.h  octree.h  qef.h
include/mana/graphics/effects/: bliteffect.h  spriteeffect.h
include/mana/graphics/entities/: blitpostprocess.h  blitswapchain.h  drawsprite.h  grass.h  manifoldplanet.h  model.h  planet.h  sprite.h
include/mana/graphics/render/: blitsprite.h  blitswapchain.h  gbuffer.h  postprocess.h  sprite.h  swapchain.h  vulkanrenderer.h  window.h
include/mana/graphics/shaders/: atmosphericscattering.h  blitshader.h  bloomshader.h  dualcontouringshader.h  fxaashader.h  grassshader.h  manifolddualcontouringshader.h  modelshader.h  modelstaticshader.h  shader.h  spriteanimationshader.h  spriteshader.h
include/mana/graphics/utilities/: camera.h  fullscreenquad.h  fullscreentriangle.h  graphicsutils.h  mesh.h  modelcache.h  orthographiccamera.h  spriteanimation.h  texture.h  texturecache.h
include/mana/network/: socket.h
lib/openmp/: libomp.lib
src/core/: arithmatic.c  camera.c  engine.c  engine.cpp  enginesettings.cpp  inputmanager.c  inputmanager.cpp  mana.c  sxml.c  util.cpp  vulkanrenderer.c  window.c
src/datastructures/: vector.c
src/graphics/: bliteffect.cpp  camera.c  camera.cpp  cloudsystem.cpp  gbuffer.c  gbuffer.cpp  graphicsutils.c  graphicsutils.cpp  grasssystem.cpp  mesh.c  model.c  model.cpp  modelentity.cpp  postprocess.cpp  shader.c  sprite.c  swapchain.c  texture.c  texture.cpp  texturecache.c  transvoxelsystem.cpp  window.cpp
src/graphics/effects/: bliteffect.c  bliteffect.cpp  bloomeffect.cpp  debugeffect.cpp  dofeffect.cpp  fxaaeffect.cpp  hbaoeffect.cpp  lensflareeffect.cpp  lightscatteringeffect.cpp  ssaoeffect.cpp  vignetteeffect.cpp
src/graphics/render/: blitsprite.c  sprite.c
src/mana/: mana.c
src/mana/core/: camera.c  engine.c  gpuapi.c  graphicslibrary.c  inputmanager.c  mana.c  vulkancore.c  vulkanrenderer.c  window.c  xmlparser.c
src/mana/graphics/: gbuffer.c  mesh.c  model.c  postprocess.c  shader.c  swapchain.c  texture.c  texturecache.c
src/mana/graphics/dualcontouring/: dualcontouring.c  octree.c  qef.c
src/mana/graphics/effects/: bliteffect.c  spriteffect.c
src/mana/graphics/entities/: blitpostprocess.c  blitswapchain.c  drawsprite.c  grass.c  manifoldplanet.c  model.c  planet.c  sprite.c
src/mana/graphics/render/: blitsprite.c  blitswapchain.c  gbuffer.c  (+5 more)
(+37 files in other folders)
